--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
                             </div>
                             <div class="contact-details">
                                 <h5>Visit Our Store</h5>
-                                <p class="mb-0">123 Bridal Avenue<br>New York, NY 10001<br>United States</p>
+                                <p class="mb-0">75a1/1 Hill St,<br> Dehiwala-Mount Lavinia</p>
                             </div>
                         </div>
 
@@ -133,7 +133,7 @@
                             <div class="contact-details">
                                 <h5>Call Us</h5>
                                 <p class="mb-0">
-                                    <a href="tel:+15551234567" class="text-decoration-none">(555) 123-4567</a><br>
+                                    <a href="tel:+15551234567" class="text-decoration-none">+94765565108</a><br>
                                     <small class="text-muted">Mon-Sat: 9:00 AM - 7:00 PM</small>
                                 </p>
                             </div>
@@ -170,10 +170,10 @@
 
                         <div class="social-links-contact">
                             <h5 class="mb-3">Follow Us</h5>
-                            <a href="#" class="social-link me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
-                            <a href="#" class="social-link me-3"><i class="fab fa-instagram fa-lg"></i></a>
-                            <a href="#" class="social-link me-3"><i class="fab fa-pinterest fa-lg"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-twitter fa-lg"></i></a>
+                            <a href="https://share.google/l62a2nP01hMRHEoPP" class="social-link me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
+                            <a href="https://www.instagram.com/brideme.lk?igsh=b3Q0aTdzNmlremN1" class="social-link me-3"><i class="fab fa-instagram fa-lg"></i></a>
+                            <a href="https://share.google/CvCzeaafpw7FCZndS" class="social-link me-3"><i class="fab fa-pinterest fa-lg"></i></a>
+                            <a href="https://share.google/XgCObGgjdwRUkBvOZ" class="social-link"><i class="fab fa-twitter fa-lg"></i></a>
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,14 @@
                         <div class="map-placeholder">
                             <i class="fas fa-map-marked-alt fa-3x mb-3"></i>
                             <p>Map Location</p>
-                            <p class="text-muted">123 Bridal Avenue, New York, NY 10001</p>
+                            <p class="text-muted">75a1/1 Hill St, Dehiwala-Mount Lavinia</p>
+                            <div class="map-embed" style="margin: 1.5rem 0;">
+            <iframe
+              src="https://www.google.com/search?sca_esv=024e24387f717cf5&sxsrf=AE3TifNff0cBGGIwzXwqH3EnfCJhWBa5Ig%3A1763738250058&kgmid=%2Fg%2F11vf3bh4z5&q=BrideMe&shndl=30&shem=damc%2Cdimg2%2Clcuae%2Cuaasie&source=sh%2Fx%2Floc%2Funi%2Fm1%2F1&kgs=ad268f815983bbe2"
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
                             <small class="text-muted">(Map integration can be added with Google Maps API)</small>
                         </div>
                     </div>
@@ -220,13 +227,13 @@
                 <div class="col-md-4">
                     <h5 class="mb-3">Connect With Us</h5>
                     <div class="social-links">
-                        <a href="#" class="text-white me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-pinterest fa-lg"></i></a>
-                        <a href="#" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
+                        <a href="https://share.google/l62a2nP01hMRHEoPP" class="text-white me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
+                        <a href="https://www.instagram.com/brideme.lk?igsh=b3Q0aTdzNmlremN1" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="https://share.google/CvCzeaafpw7FCZndS" class="text-white me-3"><i class="fab fa-pinterest fa-lg"></i></a>
+                        <a href="https://share.google/XgCObGgjdwRUkBvOZ" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
                     </div>
                     <p class="mt-3 mb-0 text-white-50">
-                        <i class="fas fa-phone me-2"></i>(555) 123-4567<br>
+                        <i class="fas fa-phone me-2"></i>+94765565108<br>
                         <i class="fas fa-envelope me-2"></i>info@brideme.com
                     </p>
                 </div>
@@ -241,7 +248,7 @@
     </footer>
 
     <!-- WhatsApp Chat Button -->
-    <a href="https://wa.me/+94757710217" 
+    <a href="https://wa.me/+94765565108" 
        class="whatsapp-float" 
        target="_blank" 
        rel="noopener noreferrer"
