--- a/booking.html
+++ b/booking.html
@@ -203,13 +203,13 @@
                 <div class="col-md-4">
                     <h5 class="mb-3">Connect With Us</h5>
                     <div class="social-links">
-                        <a href="#" class="text-white me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-pinterest fa-lg"></i></a>
-                        <a href="#" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
+                        <a href="https://share.google/l62a2nP01hMRHEoPP" class="text-white me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
+                        <a href="https://www.instagram.com/brideme.lk?igsh=b3Q0aTdzNmlremN1" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="https://share.google/CvCzeaafpw7FCZndS" class="text-white me-3"><i class="fab fa-pinterest fa-lg"></i></a>
+                        <a href="https://share.google/XgCObGgjdwRUkBvOZ" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
                     </div>
                     <p class="mt-3 mb-0 text-white-50">
-                        <i class="fas fa-phone me-2"></i>(555) 123-4567<br>
+                        <i class="fas fa-phone me-2"></i>+94765565108<br>
                         <i class="fas fa-envelope me-2"></i>info@brideme.com
                     </p>
                 </div>
@@ -222,6 +222,16 @@
             </div>
         </div>
     </footer>
+
+    <!-- WhatsApp Chat Button -->
+    <a href="https://wa.me/+94765565108" 
+       class="whatsapp-float" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       aria-label="Chat on WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+        <span class="whatsapp-tooltip">Chat with us on WhatsApp</span>
+    </a>
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
