update social media links and replace Twitter with TikTok

--- a/gallery.html
+++ b/gallery.html
@@ -420,10 +420,10 @@
                 <div class="col-md-4">
                     <h5 class="mb-3">Connect With Us</h5>
                     <div class="social-links">
-                        <a href="https://share.google/l62a2nP01hMRHEoPP" class="text-white me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
+                        <a href="https://www.facebook.com/share/1FgHfkopkn/" class="text-white me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
                         <a href="https://www.instagram.com/brideme.lk?igsh=b3Q0aTdzNmlremN1" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
                         <a href="https://share.google/CvCzeaafpw7FCZndS" class="text-white me-3"><i class="fab fa-pinterest fa-lg"></i></a>
-                        <a href="https://share.google/XgCObGgjdwRUkBvOZ" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
+                        <a href="https://www.tiktok.com/@bridemelk?_r=1&_t=ZS-91aWZWxXrmh" class="text-white"><i class="fab fa-tiktok fa-lg"></i></a>
                     </div>
                     <p class="mt-3 mb-0 text-white-50">
                         <i class="fas fa-phone me-2"></i>+94765565108<br>
