--- a/contact.html
+++ b/contact.html
@@ -170,10 +170,10 @@
 
                         <div class="social-links-contact">
                             <h5 class="mb-3">Follow Us</h5>
-                            <a href="https://share.google/l62a2nP01hMRHEoPP" class="social-link me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
+                            <a href="https://www.facebook.com/share/1FgHfkopkn/" class="social-link me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
                             <a href="https://www.instagram.com/brideme.lk?igsh=b3Q0aTdzNmlremN1" class="social-link me-3"><i class="fab fa-instagram fa-lg"></i></a>
                             <a href="https://share.google/CvCzeaafpw7FCZndS" class="social-link me-3"><i class="fab fa-pinterest fa-lg"></i></a>
-                            <a href="https://share.google/XgCObGgjdwRUkBvOZ" class="social-link"><i class="fab fa-twitter fa-lg"></i></a>
+                            <a href="https://www.tiktok.com/@bridemelk?_r=1&_t=ZS-91aWZWxXrmh" class="social-link"><i class="fab fa-tiktok fa-lg"></i></a>
                         </div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                             <p class="text-muted">75a1/1 Hill St, Dehiwala-Mount Lavinia</p>
                             <div class="map-embed" style="margin: 1.5rem 0;">
             <iframe
-              src="https://www.google.com/search?sca_esv=024e24387f717cf5&sxsrf=AE3TifNff0cBGGIwzXwqH3EnfCJhWBa5Ig%3A1763738250058&kgmid=%2Fg%2F11vf3bh4z5&q=BrideMe&shndl=30&shem=damc%2Cdimg2%2Clcuae%2Cuaasie&source=sh%2Fx%2Floc%2Funi%2Fm1%2F1&kgs=ad268f815983bbe2"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.095802819249!2d79.86704391385311!3d6.850849284759977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae25b0efd12f105%3A0x5a4d323743dc21fe!2sBrideMe!5e0!3m2!1sen!2slk!4v1700564339354!5m2!1sen!2slk"  
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
@@ -227,10 +227,10 @@
                 <div class="col-md-4">
                     <h5 class="mb-3">Connect With Us</h5>
                     <div class="social-links">
-                        <a href="https://share.google/l62a2nP01hMRHEoPP" class="text-white me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
+                        <a href="https://www.facebook.com/share/1FgHfkopkn/" class="text-white me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
                         <a href="https://www.instagram.com/brideme.lk?igsh=b3Q0aTdzNmlremN1" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
                         <a href="https://share.google/CvCzeaafpw7FCZndS" class="text-white me-3"><i class="fab fa-pinterest fa-lg"></i></a>
-                        <a href="https://share.google/XgCObGgjdwRUkBvOZ" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
+                        <a href="https://www.tiktok.com/@bridemelk?_r=1&_t=ZS-91aWZWxXrmh" class="text-white"><i class="fab fa-tiktok fa-lg"></i></a>
                     </div>
                     <p class="mt-3 mb-0 text-white-50">
                         <i class="fas fa-phone me-2"></i>+94765565108<br>
