Add file upload options to booking and contact forms, and implement PDF generation and download functionality for both forms. Integrate WhatsApp message formatting for submissions.

--- a/booking.html
+++ b/booking.html
@@ -140,6 +140,11 @@
                                     <textarea class="form-control" id="specialRequests" rows="4" placeholder="Tell us about your wedding date, style preferences, or any special requirements..."></textarea>
                                 </div>
                                 <div class="col-12">
+                                    <label for="bookingFile" class="form-label">Attach Files (Optional)</label>
+                                    <input type="file" class="form-control" id="bookingFile" accept=".pdf,.doc,.docx,.jpg,.jpeg,.png" multiple>
+                                    <small class="text-muted">You can upload inspiration photos, references, or documents (Max 10MB per file)</small>
+                                </div>
+                                <div class="col-12">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" id="agreeTerms" required>
                                         <label class="form-check-label" for="agreeTerms">
@@ -235,6 +240,8 @@
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- jsPDF Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
