--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,11 @@
                                     </div>
                                 </div>
                                 <div class="col-12">
+                                    <label for="contactFile" class="form-label">Attach File (Optional)</label>
+                                    <input type="file" class="form-control" id="contactFile" accept=".pdf,.doc,.docx,.jpg,.jpeg,.png">
+                                    <small class="text-muted">You can upload PDFs, documents, or images (Max 10MB)</small>
+                                </div>
+                                <div class="col-12">
                                     <button type="submit" class="btn btn-primary btn-lg">
                                         <i class="fas fa-paper-plane me-2"></i>Send Message
                                     </button>
@@ -259,6 +264,8 @@
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- jsPDF Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
