--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
+                <img src="image/download.jpg" alt="BrideMe Logo" class="brand-logo">
                 <span class="brand-name">BrideMe</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
