--- a/gallery.html
+++ b/gallery.html
@@ -24,6 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
+                <img src="image/download.jpg" alt="BrideMe Logo" class="brand-logo">
                 <span class="brand-name">BrideMe</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,9 +88,9 @@
                 <div class="col-md-6 col-lg-4 gallery-item" data-category="classic">
                     <div class="gallery-card">
                         <div class="gallery-image">
-                            <img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15?w=600&h=800&fit=crop" alt="Classic Wedding Dress 1" class="img-fluid">
+                            <img src="image/somesh-harshavardhan-AJ0RD2a9qOw-unsplash.jpg" alt="Classic Wedding Dress 1" class="img-fluid">
                             <div class="gallery-overlay">
-                                <button class="btn btn-light btn-sm view-image" data-image="https://images.unsplash.com/photo-1515377905703-c4788e51af15?w=1200&h=1600&fit=crop">
+                                <button class="btn btn-light btn-sm view-image" data-image="image/somesh-harshavardhan-AJ0RD2a9qOw-unsplash.jpg">
                                     <i class="fas fa-search-plus me-2"></i>View
                                 </button>
                             </div>
@@ -103,9 +104,9 @@
                 <div class="col-md-6 col-lg-4 gallery-item" data-category="classic">
                     <div class="gallery-card">
                         <div class="gallery-image">
-                            <img src="https://images.unsplash.com/photo-1532712938310-34cb3982ef74?w=600&h=800&fit=crop" alt="Classic Wedding Dress 2" class="img-fluid">
+                            <img src="image/alec-pasteur-yKqRIKItSSQ-unsplash.jpg" alt="Classic Wedding Dress 2" class="img-fluid">
                             <div class="gallery-overlay">
-                                <button class="btn btn-light btn-sm view-image" data-image="https://images.unsplash.com/photo-1532712938310-34cb3982ef74?w=1200&h=1600&fit=crop">
+                                <button class="btn btn-light btn-sm view-image" data-image="image/alec-pasteur-yKqRIKItSSQ-unsplash.jpg">
                                     <i class="fas fa-search-plus me-2"></i>View
                                 </button>
                             </div>
@@ -119,9 +120,9 @@
                 <div class="col-md-6 col-lg-4 gallery-item" data-category="classic">
                     <div class="gallery-card">
                         <div class="gallery-image">
-                            <img src="https://images.unsplash.com/photo-1464366400600-7168b8af9bc3?w=600&h=800&fit=crop" alt="Classic Wedding Dress 3" class="img-fluid">
+                            <img src="image/valeria-nikitina-08SSF0Tzoi8-unsplash.jpg" alt="Classic Wedding Dress 3" class="img-fluid">
                             <div class="gallery-overlay">
-                                <button class="btn btn-light btn-sm view-image" data-image="https://images.unsplash.com/photo-1464366400600-7168b8af9bc3?w=1200&h=1600&fit=crop">
+                                <button class="btn btn-light btn-sm view-image" data-image="image/valeria-nikitina-08SSF0Tzoi8-unsplash.jpg">
                                     <i class="fas fa-search-plus me-2"></i>View
                                 </button>
                             </div>
@@ -137,9 +138,9 @@
                 <div class="col-md-6 col-lg-4 gallery-item" data-category="modern">
                     <div class="gallery-card">
                         <div class="gallery-image">
-                            <img src="https://images.unsplash.com/photo-1519741497674-611481863552?w=600&h=800&fit=crop" alt="Modern Wedding Dress 1" class="img-fluid">
+                            <img src="image/alexander-mass-XZ12pRx-Gj8-unsplash.jpg" alt="Modern Wedding Dress 1" class="img-fluid">
                             <div class="gallery-overlay">
-                                <button class="btn btn-light btn-sm view-image" data-image="https://images.unsplash.com/photo-1519741497674-611481863552?w=1200&h=1600&fit=crop">
+                                <button class="btn btn-light btn-sm view-image" data-image="image/alexander-mass-XZ12pRx-Gj8-unsplash.jpg">
                                     <i class="fas fa-search-plus me-2"></i>View
                                 </button>
                             </div>
@@ -153,9 +154,9 @@
                 <div class="col-md-6 col-lg-4 gallery-item" data-category="modern">
                     <div class="gallery-card">
                         <div class="gallery-image">
-                            <img src="https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?w=600&h=800&fit=crop" alt="Modern Wedding Dress 2" class="img-fluid">
+                            <img src="image/hananeh-reisi-RLDa9KdVE2I-unsplash.jpg" alt="Modern Wedding Dress 2" class="img-fluid">
                             <div class="gallery-overlay">
-                                <button class="btn btn-light btn-sm view-image" data-image="https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?w=1200&h=1600&fit=crop">
+                                <button class="btn btn-light btn-sm view-image" data-image="image/hananeh-reisi-RLDa9KdVE2I-unsplash.jpg">
                                     <i class="fas fa-search-plus me-2"></i>View
                                 </button>
                             </div>
@@ -169,9 +170,9 @@
                 <div class="col-md-6 col-lg-4 gallery-item" data-category="modern">
                     <div class="gallery-card">
                         <div class="gallery-image">
-                            <img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15?w=600&h=800&fit=crop" alt="Modern Wedding Dress 3" class="img-fluid">
+                            <img src="image/marina-abrosimova-T8ml43zwPa0-unsplash.jpg" alt="Modern Wedding Dress 3" class="img-fluid">
                             <div class="gallery-overlay">
-                                <button class="btn btn-light btn-sm view-image" data-image="https://images.unsplash.com/photo-1515377905703-c4788e51af15?w=1200&h=1600&fit=crop">
+                                <button class="btn btn-light btn-sm view-image" data-image="image/marina-abrosimova-T8ml43zwPa0-unsplash.jpg">
                                     <i class="fas fa-search-plus me-2"></i>View
                                 </button>
                             </div>
@@ -187,9 +188,9 @@
                 <div class="col-md-6 col-lg-4 gallery-item" data-category="vintage">
                     <div class="gallery-card">
                         <div class="gallery-image">
-                            <img src="https://images.unsplash.com/photo-1532712938310-34cb3982ef74?w=600&h=800&fit=crop" alt="Vintage Wedding Dress 1" class="img-fluid">
+                            <img src="image/abenezer-shewaga-ujx5dJKt5Ko-unsplash.jpg" alt="Vintage Wedding Dress 1" class="img-fluid">
                             <div class="gallery-overlay">
-                                <button class="btn btn-light btn-sm view-image" data-image="https://images.unsplash.com/photo-1532712938310-34cb3982ef74?w=1200&h=1600&fit=crop">
+                                <button class="btn btn-light btn-sm view-image" data-image="image/abenezer-shewaga-ujx5dJKt5Ko-unsplash.jpg">
                                     <i class="fas fa-search-plus me-2"></i>View
                                 </button>
                             </div>
@@ -203,9 +204,9 @@
                 <div class="col-md-6 col-lg-4 gallery-item" data-category="vintage">
                     <div class="gallery-card">
                         <div class="gallery-image">
-                            <img src="https://images.unsplash.com/photo-1519741497674-611481863552?w=600&h=800&fit=crop" alt="Vintage Wedding Dress 2" class="img-fluid">
+                            <img src="image/simona-sergi-6mZFlmDfAeg-unsplash.jpg" alt="Vintage Wedding Dress 2" class="img-fluid">
                             <div class="gallery-overlay">
-                                <button class="btn btn-light btn-sm view-image" data-image="https://images.unsplash.com/photo-1519741497674-611481863552?w=1200&h=1600&fit=crop">
+                                <button class="btn btn-light btn-sm view-image" data-image="image/simona-sergi-6mZFlmDfAeg-unsplash.jpg">
                                     <i class="fas fa-search-plus me-2"></i>View
                                 </button>
                             </div>
@@ -219,9 +220,9 @@
                 <div class="col-md-6 col-lg-4 gallery-item" data-category="vintage">
                     <div class="gallery-card">
                         <div class="gallery-image">
-                            <img src="https://images.unsplash.com/photo-1464366400600-7168b8af9bc3?w=600&h=800&fit=crop" alt="Vintage Wedding Dress 3" class="img-fluid">
+                            <img src="image/yoseph-hailu-LIUsst9FiC0-unsplash.jpg" alt="Vintage Wedding Dress 3" class="img-fluid">
                             <div class="gallery-overlay">
-                                <button class="btn btn-light btn-sm view-image" data-image="https://images.unsplash.com/photo-1464366400600-7168b8af9bc3?w=1200&h=1600&fit=crop">
+                                <button class="btn btn-light btn-sm view-image" data-image="image/yoseph-hailu-LIUsst9FiC0-unsplash.jpg">
                                     <i class="fas fa-search-plus me-2"></i>View
                                 </button>
                             </div>
