--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="download.jpg" alt="BrideMe Logo" class="brand-logo">
+                <img src="image/download.jpg" alt="BrideMe Logo" class="brand-logo">
                 <span class="brand-name">BrideMe</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,7 +76,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="collection-card">
                         <div class="collection-image">
-                            <img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15?w=400&h=600&fit=crop" alt="Classic Collection" class="img-fluid">
+                            <img src="image/somesh-harshavardhan-AJ0RD2a9qOw-unsplash.jpg" alt="Classic Collection" class="img-fluid">
                             <div class="collection-overlay">
                                 <a href="gallery.html?category=classic" class="btn btn-light">View Collection</a>
                             </div>
@@ -118,7 +118,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="collection-card">
                         <div class="collection-image">
-                            <img src="https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?w=400&h=600&fit=crop" alt="Luxury Collection" class="img-fluid">
+                            <img src="image/naeem-ad-y-Xh_GgU4eo-unsplash.jpg" alt="Luxury Collection" class="img-fluid">
                             <div class="collection-overlay">
                                 <a href="gallery.html?category=luxury" class="btn btn-light">View Collection</a>
                             </div>
@@ -138,7 +138,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <img src="https://images.unsplash.com/photo-1464366400600-7168b8af9bc3?w=800&h=600&fit=crop" alt="BrideMe Shop" class="img-fluid rounded">
+                    <img src="image/kim-allexis-diwa-J9ZN9PSTllA-unsplash.jpg" alt="BrideMe Shop" class="img-fluid rounded">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="section-title mb-4">About BrideMe</h2>
